[gd_scene load_steps=4 format=3 uid="uid://bdtmi60lcun7r"]

[ext_resource type="Script" path="res://src/weapons/bullet/gun.gd" id="1_ctd5e"]
[ext_resource type="AudioStream" uid="uid://bje17vnrimpkt" path="res://assets/weapons/alienshoot3.wav" id="2_75n8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muyqo"]
size = Vector2(816, 128)

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ctd5e")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -6.0
offset_right = 48.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(456, 0)
shape = SubResource("RectangleShape2D_muyqo")

[node name="ShootTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Cannon" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(48, 0)

[node name="ShootSFX" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_75n8q")
volume_db = -10.0
pitch_scale = 1.5

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
